test/spec_vectors/local_set/fail/module_26.wat
(module (func $type-empty-vs-f32 (param f32) (result f32) (local.set 0 (f32.const 1))))